--- a/ProjectManager/ProjectManager/Utility/Infrastructure.csproj
+++ b/ProjectManager/ProjectManager/Utility/Infrastructure.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Utility.cs" />
     <Compile Include="Enums\Enum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
